--- a/.github/workflows/quic-organization-repolinter.yml
+++ b/.github/workflows/quic-organization-repolinter.yml
@@ -11,17 +11,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
       - name: Verify repolinter config file is present
         id: check_files
-        uses: andstor/file-existence-action@v2
+        uses: andstor/file-existence-action@v1
         with:
           files: "repolint.json"
       - name: Run Repolinter with local repolint.json
         if: steps.check_files.outputs.files_exists == 'true'
-        uses: todogroup/repolinter-action@v1
+        with:
+          config_file: "repolint.json"
+        uses: newrelic/repolinter-action@v1
       - name: Run Repolinter with default ruleset
         if: steps.check_files.outputs.files_exists == 'false'
-        uses: todogroup/repolinter-action@v1
+        uses: newrelic/repolinter-action@v1
         with:
           config_url: "https://raw.githubusercontent.com/quic/.github/main/repolint.json"
